test/cli/test-validating-policy/json-with-exceptions/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: exclude-test-resources
spec:
  policyRefs:
  - name: "check-json-data"
    kind: ValidatingPolicy
  matchConditions:
    - name: "check-name"
      expression: "object.metadata.name == 'skipped-resource'"
