test/cli/test-validating-policy/json-with-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
exceptions:
- exception.yaml
jsonPayloads:
- skipped-payload.json
kind: Test
metadata:
  name: vpol-test-json-with-exceptions
policies:
- policy.yaml
results:
- kind: ""
  policy: check-json-data
  result: skip
